ui: fix title select framing (shorter label, chevron spacing)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,11 +113,11 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  padding-right: 2.25rem;
+  padding-right: 1.9rem;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%23a1a1aa' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><path d='M6 9l6 6 6-6'/></svg>");
   background-repeat: no-repeat;
-  background-position: right 0.85rem center;
-  background-size: 15px;
+  background-position: right 0.6rem center;
+  background-size: 14px;
 }
 select::-ms-expand {
   display: none;
